[metadata]
name = jlog
version = 0.1.0
author = jlog
description = A markdown-based CLI journaling tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlog/jlog
project_urls =
    Bug Tracker = https://github.com/jlog/jlog/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.extras_require]
visualizations = matplotlib

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    jlog = jlog.cli:main 